*Empty MediaWiki Message*

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -15,16 +15,16 @@ De taal wördt soms oek wel kortweg ''Saksisch'' eneumd, een benaming die van ou
 
 ==Geografisch gebied==
 ===In Europa===
-Et Nedersaksisch wördt veural espreuken in et noordoostelike deel van [[Nederlaand]] (de provincies [[Grunnen (provinzie)|Groningen]], [[Drenthe]] en [[Oaveriessel|Overiessel]], de [[Gelderlaand|Gelderse]] gebiejen de [[Veluwe]] en de [[Achterhook|Achterhoek]], de [[Stellingwarven]] in et zuudoosten van [[Frieslaand]], en [[Urk]] in [[Flevolaand]]) en in et noordelike deel van [[Duutslaand]] (onder aandere in [[Nedersaksen]], [[Westfalen|Westfaolen]], [[Hamburg]], [[Bremen]], [[Sleeswiek-Holstein]],  [[Mecklenburg-Veur-Pommeren]], [[Saksen-Anhalt]] en [[Braandenburg]], oek kleine gedeeltes van et noorden van [[Hessen]] en [[Thüringen]] spreken van oorsprong Nedersaksies). Et Nedersaksisch dat in Nederlaand espreuken wördt, wördt tot et [[West Leegsaksisch (algemain)|West-Nedersaksisch]] erekend. Et Nedersaksisch uut Duutslaand veur een groot gedeelte oek, mer et oostelike deel völt onder et [[Oost Leegduuts|Oost-Nedersaksisch]] (oek wel et ''Oost-Nederduuts'' eneumd).
+Et Nedersaksisch wördt veural espreuken in et noordoostelike deel van [[Nederlaand]] (de provincies [[Grunnen (provinzie)|Groningen]], [[Drenthe]] en [[Oaveriessel|Overiessel]], de [[Gelderlaand|Gelderse]] gebiejen de [[Veluwe]] en de [[Achterhook|Achterhoek]], de [[Stellingwarven]] in et zuudoosten van [[Frieslaand]], en [[Urk]] in [[Flevolaand]]) en in et noordelike deel van [[Duutslaand]] (onder aandere in [[Nedersaksen]], [[Westfalen|Westfaolen]], [[Hamburg]], [[Bremen]], [[Sleeswiek-Holstein]],  [[Mecklenburg-Veur-Pommeren]], [[Saksen-Anhalt]] en [[Braandenburg]], oek kleine gedeeltes van et noorden van [[Hessen]] en [[Thüringen]] spreken van oorsprong Nedersaksisch). Et Nedersaksisch dat in Nederlaand espreuken wördt, wördt tot et [[West Leegsaksisch (algemain)|West-Nedersaksisch]] erekend. Et Nedersaksisch uut Duutslaand veur een groot gedeelte oek, mer et oostelike deel völt onder et [[Oost Leegduuts|Oost-Nedersaksisch]] (oek wel et ''Oost-Nederduuts'' eneumd).
 
-Eertieds wördden et Nedersaksisch volop espreuken in et [[Denemarken|Deense]] [[Zuud-Jitlaand|Zuud-Jutlaand]], tegenswoordig bin dat der een stuk minder. Oek an de raand van [[Berlien]] praotten ze van oorsprong Nedersaksies, mer mit de verstedeliking en nasionale centralisasie is et dialekt uutestörven. In de noordelike Duutse gebiejen, wat noen [[Pooln|Polen]], de [[Ruslaand|Russiese]] provincie [[Koningsbargen]], zuudwestelik [[Litouwen]] en [[Estlaand]] bin, was et Nedersaksisch oek goed vertegenwoordigd. Sinds de verdrieving van et grootste gedeelte van de [[Duutslaand|Duutse]] bevolking, an et einde van de [[Tweede Wereldoorlog]], wördden et der haost niet meer espreuken. Vandage de dag bin der nog wel een stuk of wat Nedersaksische sprekers buten Nederlaand en Duutslaand in de kustgebiejen van [[Polen]] (een minderheid etnische Duutsers); sprekers van et ''[[Oostpommers]]'' die Pommeren niet uutezet bin, en oek de regio's rond [[Braniewo]]).
+Eertieds wördden et Nedersaksisch volop espreuken in et [[Denemarken|Deense]] [[Zuud-Jitlaand|Zuud-Jutlaand]], tegenswoordig bin dat der een stuk minder. Oek an de raand van [[Berlien]] praotten ze van oorsprong Nedersaksisch, mer mit de verstedeliking en nasionale centralisasie is et dialekt uutestörven. In de noordelike Duutse gebiejen, wat noen [[Pooln|Polen]], de [[Ruslaand|Russische]] provincie [[Koningsbargen]], zuudwestelik [[Litouwen]] en [[Estlaand]] bin, was et Nedersaksisch oek goed vertegenwoordigd. Sinds de verdrieving van et grootste gedeelte van de [[Duutslaand|Duutse]] bevolking, an et einde van de [[Tweede Wereldoorlog]], wördden et der haost niet meer espreuken. Vandage de dag bin der nog wel een stuk of wat Nedersaksische sprekers buten Nederlaand en Duutslaand in de kustgebiejen van [[Polen]] (een minderheid etnische Duutsers); sprekers van et ''[[Oostpommers]]'' die Pommeren niet uutezet bin, en oek de regio's rond [[Braniewo]]).
 
 ===Buten Europa===
 {{Heufdartikel|Plautdietsch|vel}}
 Op et Amerikaanse vastelaand bin der oek gemeenschappen die Nedersaksisch praoten, bieveurbeeld: Kanada, de [[Verienigde Staoten van Amerika|Verenigde Staoten van Amerika]], [[Mexico (laand)|Mexiko]], [[Venezuela]], [[Zuud-Afrika]], [[Centraal-Azië]], [[Bolivia]], [[Argentinië]], [[Brazilië]], [[Paraguay]] en [[Uruguay]]. In sommige laanden maakt de taal deel uut van et mennonitische geleuf en de mennonitische kultuur. Der bin mennonitische gemeenschappen in [[Ontario]], [[Saskatchewan]], [[Alberta]], [[Brits-Kolumbia]], [[Manitoba]], en [[Minnesota]] die et Nedersaksisch (lees: [[Plautdietsch]]) in karkdiensten en as kultuurtaal gebruken; de veurouwers van disse meensen waren veurnamelik Duutsers uut de niej verwörven gebiejen in Ruslaand en Oekraïne, die in de [[19e eeuw]] en an et begin van de [[20e eeuw]] naor et Amerikaanse kontinent verhuusden. Dit Nedersaksische dialekt is binnen disse gemeenschappen, en in et middenwesten van de [[Verienigde Staoten van Amerika|VS]], sinds de volksverhuzing vanuut Ruslaand en Oekraïne wat uutenegreuid. De veuruutzichten van et voortbestaon van de taal is in veule plaotsen niet goed, en is in sommige plaotsen, waor de meensen op-egaon bin in de samenleving, al uutestörven. In mennonitische kolonies in Paraguay, Zuud-Amerika, Belize, en Chihuahua, Mexiko is et Nedersaksisch een "ko-officiële taal" van de gemeenschap ewörden, naost de officiële laandstaal ([[Spaans]]). Et Oostpommers wördt oek espreuken in delen van [[Brazilië|Zuudwest-Brazilië]].
 
 ==Geschiedenisse==
-Et Nedersaksisch stamp van et [[Oldsaksisch|Oudsaksisch]] aof, de taal van de [[Saksen (vôlk)|Saksen]]. De oudste teksten in et Oudsaksisch, die achterebleven bin, stammen uut de [[9e eeuw]]. In de [[12e eeuw]] is daor weer et [[Middelnedersaksisch]] uut ontstaon. Disse taal was de haandelstaal van de [[Hanze]]. Et Middelnedersaksisch is deur de Hanzekoopluui in et hele [[Noordzee|Noord-]] en [[Oostzee]]gebied verspreid eraakt en was daor de belangriekste taal. Een bult Middelnedersaksische woorden bin daordeur in de [[Noord-Germaanse talen]] (Skandinavische talen) terechtekeumen. Toe de [[16e eeuw]] tot een einde kwam, was de tied van de Hanze grotendeels veurbie. Luui die een betere opleiding hadden praotten in [[Nederlaand]] [[Standerdnederlaands|Standardnederlaands]] en in [[Duutslaand]] [[Hoogduuts]]. Tenminsten, bie et zakendoon was dat wel zo, thuus praotten ze nog Nedersaksies. De Middelnedersaksische schrieftaal, die daoruut voortekeumen was, völ in de meeste dialekten uut mekaar. Allinnig in een antal gebiejen bleef et Nedersaksisch nog op schrift bestaon of is in de loop van de tied weer opniej op-esteld.
+Et Nedersaksisch stamp van et [[Oldsaksisch|Oudsaksisch]] aof, de taal van de [[Saksen (vôlk)|Saksen]]. De oudste teksten in et Oudsaksisch, die achterebleven bin, stammen uut de [[9e eeuw]]. In de [[12e eeuw]] is daor weer et [[Middelnedersaksisch]] uut ontstaon. Disse taal was de haandelstaal van de [[Hanze]]. Et Middelnedersaksisch is deur de Hanzekoopluui in et hele [[Noordzee|Noord-]] en [[Oostzee]]gebied verspreid eraakt en was daor de belangriekste taal. Een bult Middelnedersaksische woorden bin daordeur in de [[Noord-Germaanse talen]] (Skandinavische talen) terechtekeumen. Toe de [[16e eeuw]] tot een einde kwam, was de tied van de Hanze grotendeels veurbie. Luui die een betere opleiding hadden praotten in [[Nederlaand]] [[Standerdnederlaands|Standardnederlaands]] en in [[Duutslaand]] [[Hoogduuts]]. Tenminsten, bie et zakendoon was dat wel zo, thuus praotten ze nog Nedersaksisch. De Middelnedersaksische schrieftaal, die daoruut voortekeumen was, völ in de meeste dialekten uut mekaar. Allinnig in een antal gebiejen bleef et Nedersaksisch nog op schrift bestaon of is in de loop van de tied weer opniej op-esteld.
 
 Et Nedersaksisch is nauw verwant an et [[Fries]], mer oek an et [[Engels]], dat kömp onder aandere deurdat der een bult Saksen uut [[Noord-Duutslaand]] in et jaor 450 naor [[Groot-Brittannie|Engelaand]] ezeild bin en daor samen mit de [[Angelen]], [[Juten]] en de [[Friezen]] de [[Angelsaksen]] evormp hebben. De overeenkomsten tussen de dree talen zollen uutwiezen naor een gemeenschappelike herkomst.
 
