--- a/Renaissance.mw
+++ b/Renaissance.mw
@@ -16,7 +16,7 @@ Ook in de beelhaauwkunst en de architektuur komt dizze rust en realistiziteit we
 De meziek is, net as de andere kunsten, ook vleureger. De [[meziekkleur]] bestaait in de Renaissance veural uut lichtblaauw. Dit omdat t ook n rust in zoch het.
 
 == Waitenschop ==
-In de Renaissance kwam ook de waitenschop op. Veurheen, in de middelaiwen, was de verkloaren veur alles: ''[[god]]''. Alles wat man nait verkloarn kon, was gewoon god's waark. In de renaissance, dou de mìns zölf belaankrieker wuir, begonnen mìnzen zoch meer of te vroagen van hou of wat. n Veurbeeld van n waitenschopper uut de Renaissance is [[Leonardo da Vinci]]. Hai was ain van de eerste [[Anatomie|anatomische]] geleerden noa de Grieken en de Reumers. Noast dit op papier te zetten, zo as de Vitruvische Mìns, gebruukte hai de kennes van de anatomie ook in zien schilderijen.
+In de Renaissance kwam ook de wetenschap op. Voorheen, in de middeleeuwen, was de verkloaren veur alles: ''[[god]]''. Alles wat man nait verkloarn kon, was gewoon god's waark. In de renaissance, dou de mìns zölf belaankrieker wuir, begonnen mìnzen zoch meer of te vroagen van hou of wat. n Veurbeeld van n waitenschopper uut de Renaissance is [[Leonardo da Vinci]]. Hai was ain van de eerste [[Anatomie|anatomische]] geleerden noa de Grieken en de Reumers. Noast dit op papier te zetten, zo as de Vitruvische Mìns, gebruukte hai de kennes van de anatomie ook in zien schilderijen.
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Renaissance| ]]
