--- a/Lunze.mw
+++ b/Lunze.mw
@@ -3,7 +3,7 @@
 |-
 |[[Ofbeelding:Konische Vierkantnägel-1.jpg|thumb|Vierkaante lunzen]]
 |}
-n '''Lunze''' of '''luns''' is n van [[staol (metaal)|stoal]] môkte stukkie smidwaark dij bruukt worden om zoaken aanmekoar vast te môken. 
+n '''Lunze''' of '''luns''' is n van [[stoal]] môkte stukkie smidwaark dij bruukt worden om zoaken aanmekoar vast te môken. 
 
 De maist bruukte is de lunze mit platrutende kop. Veur waark woarbie de lunzen zichtboar blieven (zonuimd zichtwaark), bruukt man ook wel de lunze mit verloren kop; dizzent valen minder op. Ook binnen der lunzen mit n soort schroufdroad of mit weerhoakies, dij hail moelek lös te roppen binnen.
 
@@ -17,7 +17,7 @@ Lunzen kinnen mit n [[hoamer]] of mit n lunsmessien verwaarkt worden.
 *'''Overeg:''' ''spieker'', ''speker'', ''draodn{{small()|a}}egel'' (en spellingsvarianten)
 
 ==Trivia==
-*''Spieker'' is ok n name veur n veurraodskure waor [[graonn]] op-eslaegen wöd. Spieker is n olde verbaastering van t woord "spicarium", ''spica'' is Latien veur graon. Dit woord veur graonopslagplaetse vind wi'j deur heel Nederlaand maor veural in t noorden en t oosten van Nederlaand. 
+*''Spieker'' is ok n name veur n veurraodskure waor [[graon]] op-eslaegen wöd. Spieker is n olde verbaastering van t woord "spicarium", ''spica'' is Latien veur graon. Dit woord veur graonopslagplaetse vind wi'j deur heel Nederlaand maor veural in t noorden en t oosten van Nederlaand. 
 *Mit ''draodnegel'' wörden oek wel es n "dwars" of "vervelend meens" bedoeld.
 
 {|
