Spesiaal:LintErrors/bogus-image-options

--- a/Hainego.mw
+++ b/Hainego.mw
@@ -1,6 +1,6 @@
 {{TabProvBelg
 | noam = Hainego
-| ofbeelding vlage = [[Ofbeelding:Flag of Hainaut.svg|125px|Vlage van Hainego]]
+| ofbeelding vlage = [[Ofbeelding:Flag of Hainaut.svg|125px|border|Vlage van Hainego]]
 | ofbeelding woapen = [[Ofbeelding:WapenHenegouwen.jpg|130px|Woapen van Hainego]]
 | kortnoam = Hainego
 | heufdstad = [[Bergen (stad)|Baargen]] (Mons)
@@ -11,9 +11,9 @@
 | breedtegroad = 50/30//N
 | lengtegroad = 03/55//E
 | region = BE
-| ofbeelding =  [[Ofbeelding:BelgiumHainaut.png|Lokoatsie van de provìnzie Hainego|260px|Hainego in Belgie]]
+| ofbeelding = [[Ofbeelding:BelgiumHainaut.png|260px|Hainego in Belgie]]
 | Gouverneur = [[Claude Durieux]]
-| Webstee = [http://www.hainaut.be www.hainaut.be]
+| Webstee = [http://www.hainaut.be/ www.hainaut.be]
 }}
 [[Ofbeelding:HainautGemeenten.png|right|Gemainten in Hainego]]
 '''Hainego''' ([[Frans]]: ''Hainaut'', [[Woals]]: ''Hinnot'', [[Nederlaands|Floams]]: ''Henegouwen'') is n provìnzie ien t zuudwesten van [[Belgie]], mit as heufdstad [[Bergen (België)|Baargen]] (Mons). t Oppervlak is 3786 [[vierkaante kilemeter|km²]] en de provìnzie telt 1.290.079 ienwoner (1 jannewoari 2006). De provìnzie heurt tot [[Waalnlaand|Wallonie]]. t Grinst ien t westen aan [[Westfloandern]] en [[Frankriek]] (depaartemint [[Nord - Pas-de-Calais]]), ien t zuden ook aan Frankriek, ien t oosten aan [[Noamen (provìnzie)|Noamen]] en ien t noorden aan [[Woals Broabant]].
