[[Spesiaal:LintErrors/bogus-image-options]]

--- a/Westfloandern.mw
+++ b/Westfloandern.mw
@@ -1,6 +1,6 @@
 {{TabProvBelg
 | noam = Westfloandern
-| ofbeelding vlage = [[Bestaand:Flag of West Flanders.svg|125px|Vlage van Westfloandern]]
+| ofbeelding vlage = [[Bestaand:Flag of West Flanders.svg|125px|border|Vlage van Westfloandern]]
 | ofbeelding woapen = [[Bestaand:West Vlaanderen wapenschild.jpg|80px|Woapen van Westfloandern]]
 | kortnoam = Westfloandern
 | heufdstad = [[Brugge (stad)|Brugge]]
@@ -11,9 +11,9 @@
 | breedtegroad = 51///N
 | lengtegroad = 3///E
 | region = BE
-| ofbeelding =  [[Bestaand:BelgiumWestFlanders.png|Locaotie van de previncie West-Vlaonderen|260px|Westfloandern in Belgie]]
+| ofbeelding = [[Bestaand:BelgiumWestFlanders.png|260px|Westfloandern in Belgie]]
 | Gouverneur = [[Paul Breyne]]
-| Webstee = [http://www.west-vlaanderen.be www.west-vlaanderen.be]
+| Webstee = [http://www.west-vlaanderen.be/ www.west-vlaanderen.be]
 }}
 
 De provìnzie '''Westfloandern''' is ain van de vief provìnzies van [[Vlaonderen|Floandern]] en aine van de tien in [[Belgie]]. t Is de maist westelk legen provìnzie in Floanern.
