[[Spesiaal:LintErrors/bogus-image-options]]

--- a/Limbörg_(Belgie).mw
+++ b/Limbörg_(Belgie).mw
@@ -1,6 +1,6 @@
 {{TabProvBelg
 | noam = Limbörg
-| ofbeelding vlage = [[Ofbeelding:Flag of Limburg (Belgium).svg|150px|Vlage van Limbörg]]
+| ofbeelding vlage = [[Ofbeelding:Flag of Limburg (Belgium).svg|150px|border|Vlage van Limbörg]]
 | ofbeelding woapen = [[Ofbeelding:Wapen van Limburg (België).svg|130px|Woapen van Limbörg]]
 | kortnoam = Limbörg
 | heufdstad = [[Hasselt (België)|Hasselt]]
@@ -11,9 +11,9 @@
 | breedtegroad = 50/36//N
 | lengtegroad = 05/56//E
 | region = BE-VLI
-| ofbeelding =  [[Ofbeelding:BelgiumLimburg.png|Locatie van de provincie Limburg|260px|Limbörg in Belgie]]
+| ofbeelding =  [[Ofbeelding:BelgiumLimburg.png|260px|Limbörg in Belgie]]
 | Gouverneur = [[Herman Reynders]]
-| Webstee = [http://www.limburg.be www.limburg.be]
+| Webstee = [http://www.limburg.be/ www.limburg.be]
 }}
 
 De '''provìnzie Limbörg''' ([[Limbörgs]]: Belsj Limburg) is ain van de vief provìnzies van [[Vlaonderen|Floandern]] en ain van de tiene van [[Belgie]]. t Grenst in t oosten aan [[Limburg (Nederlaand)|Nederlaands Limbörg]], in t zuden aan [[Loek (provìnzie)|Loek]], in t westen aan [[Floams Broabant]] en [[Antwaarp (provìnzie)|Antwaarp]] en in t noorden aan [[Noord-Braobant|Noordbroabant]].
