[[Spesiaal:LintErrors/bogus-image-options]]

--- a/Floams_Broabant.mw
+++ b/Floams_Broabant.mw
@@ -1,6 +1,6 @@
 {{TabProvBelg
 | noam = Floams Broabant
-| ofbeelding vlage = [[Bestaand:Flag of Flemish Brabant.svg|150px|Vlage van Floams Broabant]]
+| ofbeelding vlage = [[Bestaand:Flag of Flemish Brabant.svg|150px|border|Vlage van Floams Broabant]]
 | ofbeelding woapen =
 | kortnoam = Floams Broabant
 | heufdstad = [[Leuven]]
@@ -11,9 +11,9 @@
 | breedtegroad = 50/55//N 
 | lengtegroad = 4/35//E
 | region = BE
-| ofbeelding =  [[Bestaand:BelgiumFlemishBrabant.png|Lokoatsie van de provìnzie Floams Broabant|260px|Floams Broabant in Belgie]]
+| ofbeelding =  [[Bestaand:BelgiumFlemishBrabant.png|260px|Floams Broabant in Belgie]]
 | Gouverneur = [[Lodewijk De Witte]]
-| Webstee = [http://www.vlaamsbrabant.be www.vlaamsbrabant.be]
+| Webstee = [http://www.vlaamsbrabant.be/ www.vlaamsbrabant.be]
 }}
 
 De provìnzie '''Floams Broabant''' ([[Nederlaands|Floams]]: ''Vlaams-Brabant'', [[Frans]]: ''Brabant Flamand''), mit as heufdstad [[Leuven]], is ain van de tien [[previnsie|provìnzies]] van [[Belgie]]. Zie is de jonkste en ook de klainste van de vief [[Vlaonderen|Floamse]] provìnzies. De belaangriekste steden binnen  [[Leuven]], [[Vilvoorde]], [[Halle (Vlaoms-Braobant)|Halle]], [[Tienen]], [[Diest]] en [[Aarschot]].
@@ -113,7 +113,7 @@ Gemainten met een stadstitel hebben ''(stad)'' aachter heur noam stoan
 |}
 
 == Boetende hinwieze ==
-* [http://www.vlaams-brabant.be Offisjele webstee van de provìnzie Floams Broabant]
+* [http://www.vlaams-brabant.be/ Offisjele webstee van de provìnzie Floams Broabant]
 
 {{ProvBelg}}
 
