[[Spesiaal:LintErrors/bogus-image-options]]

--- a/Antwaarp_(provìnzie).mw
+++ b/Antwaarp_(provìnzie).mw
@@ -1,6 +1,6 @@
 {{TabProvBelg
 | noam = Antwaarp
-| ofbeelding vlage = [[Bestaand:Flag of Antwerp.svg|125px|Vlagge van Antwaarp]]
+| ofbeelding vlage = [[Bestaand:Flag of Antwerp.svg|125px|border|Vlagge van Antwaarp]]
 | ofbeelding woapen = [[Bestaand:Wapen van de provincie Antwerpen.svg|125px|Woapen van Antwaarp]]
 | kortnoam = Antwaarp
 | heufdstad = [[Antwerpen (stad)|Antwaarp]]
@@ -11,9 +11,9 @@
 | breedtegroad = 51/13//N
 | lengtegroad  =  4/25//E
 | region = BE-VAN
-| ofbeelding =  [[Bestaand:BelgiumAntwerp.png|Locatie van de provincie Antwerpen|260px|Lokatie van Antwaarp in Belgie]]
+| ofbeelding =  [[Bestaand:BelgiumAntwerp.png|260px|Lokatie van Antwaarp in Belgie]]
 | Gouverneur = [[Cathy Berx]]
-| Webstee = [http://www.provant.be www.provant.be]
+| Webstee = [http://www.provant.be/ www.provant.be]
 }}
 
 De '''provìnzie Antwaarp''' is ain van de vief [[Vlaonderen|Floamse]] provìnzies en ain van de tiene van [[Belgie]]. Antwaarp grenst in t westen aan [[Oostfloandern]], in t oosten aan [[Limbörg (Belgie)|Belgisch Limbörg]], in t zuden aan [[Floams Broabant]] en in t noorden aan [[Nederlaand]]. De heufdstad is de lieknoamege stad [[Antwerpen (stad)|Antwaarp]].
