[[Spesiaal:LintErrors/bogus-image-options]]

--- a/SS_Espagne_(Anversois,_1909).mw
+++ b/SS_Espagne_(Anversois,_1909).mw
@@ -1,4 +1,4 @@
-[[Bestaand:SS Espagne (Anversois, 1909).jpg|thumb|250px|SS Espagne (Anversois, 1909)|SS Espagne]]
+[[Bestaand:SS Espagne (Anversois, 1909).jpg|thumb|250px|SS Espagne]]
 
 Den '''SS Espagne''' was een [[België|Belgisch]] skip dy zunk in de [[Noordzee]] deur een Duutse duukboot op 25 dezìmber 1917. 
 
