--- a/Mael.mw
+++ b/Mael.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Secale cereale flour.jpg|250px|thumb|Deur [[koornmölle]] emoalen [[rogge]]]]
 [[Ofbeelding:Walderveense molen maismeel.jpg|250px|thumb|Deur [[koornmölle]] emoalen [[maïs]]]]
-[[Ofbeelding:Sint Willebrordus molen buil Bakel.jpg|Buul veur et zaeven (buulen) van et mael|250px|thumb|Buul veur et zaeven (buulen) van et mael]]
+[[Ofbeelding:Sint Willebrordus molen buil Bakel.jpg|250px|thumb|Buul veur et zaeven (buulen) van et mael]]
 '''Mael''' (Ok wal vals [[bloom (kökken)|bloom]] eneumd ) is n toovoogsel in völle ettenswoaren, en et is ne tot poder emalen [[groan]]soorte of n aander [[zetmael]]-riek produkt, zoas [[bookweit]]. 
 
 Normaal esproaken wödt mit '''mael''' [[tarwe]]mael bedoold, dit is et belangriekste toovoogsel in de Europese en Amerikaanse kultuur. Tarwemael wöd ebruukt in de meeste soorten bruunbrood, ezaefd mael laevert bloom op en hiervan wodt de meeste witbroodsoorten emaakt. Den reden dat et zo wiedverspreid ebruukt wödt is deurdat et de volgende belangrieke eigenschop hef: as tarwemael, bloom of n mengsel hiervan wöd vermengd mit water en tot daeg ekneed wöd, untsteet doar ne ingewekkelden [[proteïne]] eneumd [[gluten]]. Et untstoan van gluten is wat et tarwedaeg ne elastiese samenstelling en gasvastholdend vermeugen guf woardeur et op verskillende wiezen verwarkt kan wödden. Ok wöd deur toovoging van gist gasbubbels (CO<sub>2</sub>) in-ebakken woardeur ne löchtege samenstelling untsteet in et uutendeleke produkt.
