--- a/Angelsassen.mw
+++ b/Angelsassen.mw
@@ -27,7 +27,7 @@ De geskiedenisse van de Angelsassen löp roewweg vanof t eande van de [[Romeinse
 De verhuuzing van de Germaanse volker noar Brittanje vanoet wat rechtevoort [[Noord-Duutslaand]] en [[Noordoost-Nederlaand]] is en zudelik [[Skandinavië]] ligt vaste vanof t viefde joarhoonderd. Baseerd op Bede's ''Historia ecclesiastica gentis Anglorum'' wörd t intrekkende volk normaal aait opdeeld in Angeln, Sassen en Jutn, mer öare saamnstelling was nit zo rechtlienig. Dr köant ook heel good  [[Frisii|Freesken]] en [[Fraankn]] bie hebn ewest. n ''[[Angelsassenkroniek]]'' hef woarskienlik vermeeldingn van de verhuuzing van disse stämme noar Brittanje. 
 
 === Heptarchie (600–800) ===
-[[Bestaand:Britain peoples circa 600.svg|thumb|300px|right|upright|alt=Kaarte van Angelsassies Brittanje|Angelsassies Engelaand|De heuwdgroepn van de Angelsassen roond t joar 600 verdeeld in Bede's dree groepn, skoonwal t in t echt wat ingewikkelder kan hebn ewest]]  
+[[Bestaand:Britain peoples circa 600.svg|thumb|300px|upright|alt=Kaarte van Angelsassies Brittanje|De heuwdgroepn van de Angelsassen roond t joar 600 verdeeld in Bede's dree groepn, skoonwal t in t echt wat ingewikkelder kan hebn ewest]]  
 
 De kerstening van de Angelsassen begun in [[597]] en wör zo'n betn of eroondt in [[686]]. Gedoernde t zeuwnde en achtste joarhoonderd verskeuf de macht nog wal es n moal tusken de verskilnde keuninkriekn. Bede skrif at [[Aethelbert van Kent]] teegn t eande van t zesde jaorhoonderd oawerheersen, mer doarnoa verskeuf t richting [[Mersië]] en [[Noord-Umbrië]]. Aethelbert en n antal van zinne opvolgers of aandere keuningn wördn ezeen duur de aandere keuningn as [[Bretwalda]] (hearser oawer Brittanje). De zoneumde ''Mersiaanse Oawerheersing'' doern t achtste joarhoonderd, mer t was nit konstant. Aethelbald en [[Offa van Mersië]], de twee stoarkste keuningn, kreegn ook hoog anzeen. Disse tied wör in t verleedn wal beskreewn as [[Heptarchie]], mer dissen term wörd duur wetenskoppers nit mear gebroekt.
 
