*Empty MediaWiki Message*

--- a/Dättlikon.mw
+++ b/Dättlikon.mw
@@ -1,7 +1,15 @@
-[[Ofbeelding:Karte Gemeinde Dättlikon 2007.png|thumb|250px|De ligging van Dättlikon]]
-[[Ofbeelding:Daettlikon 153.jpg|thumb|250px|Dättlikon]]
-[[Ofbeelding:Daettlikon-blazon.svg|right|90px]]
-
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''Dättlikon'''</big></big>
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[Ofbeelding:Daettlikon-blazon.svg|125px]]
+| align="center" width="140px" | [[Ofbeelding:Karte Gemeinde Dättlikon 2007.png|right|125px]]
+|}
+|-
+| align=center colspan=2 | [[Ofbeelding:Daettlikon 153.jpg|300px]]
+|}
 '''Dättlikon''' is een gemainte en een ploats in 't [[Zwitserlaand|Zwitserse]] kanton [[Zürich (kanton)|Zürich]] en ligt in t district [[Winterthur (district)|Winterthur]]. De gemainte het sikkom 780 inwoner (2016) op n oppervlak van 2,87 km².
 
 == Boetende hìnwiezen ==
