/* Et seisoon van 2017: Veerde werldtitel */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -158,7 +158,7 @@ Rosberg nam de leiding weader oaver in Singapore, den sich kwalificereden vöär
 
 Rosberg breideden synen vöärsprong in et kampioonskap wyder uut når 33 points in Japan, wårby hy in de race in eyrste startpositsy vertrök en wön. Undertüsken had Hamilton weader nen slechten start, wårby hy terügveel van de tweyde positsy by den start når de achtste an et ende van de eyrste runde. Hy herstelleden sich med ne andere pitstrategy wårdöär hy weader dardes was in et låtste deal van de race mår hy kön Max Verstappen neet inhålen en endigeden as darden, wårdöär hy now nen achterstand van 33 pünten up Rosberg had en hy neet meyr eigenhändig et kampioonskap kön winnen. Dit resultåt verseakereden Mercedes van de darde werldkampioonskapstitel vöär konstrukteurs up nen ry. Hamilton begön de leiding van Rosberg too verminderen döär as eyrsten man in nen 1–2 finish in de Vereynigde Ståten too endigen. Hamilton leidden ok nen 1–2 uutslag van Mercedes in Meksiko en in Brasilie, wår hy de swår verreagende race dominereden en nen ny dreetal oaverwinningen kompleet måkeden. Mår ümdat Rosberg tweyds endigeden in de race, mos Hamilton um et kampioonskap too winnen, den Grouten Prys van Abu Dhabi winnen terwyl Rosberg veerdes ov låger mos endigen.
 
-In Abu Dhabi behåleden Hamilton de eyrste startpositsy vöär Rosberg en had up hem nen vöärsprong vöär et gröytsten deal van de race.  In de låtste runden van de race ging Hamilton teagen teamorders in, eyrst van synen raceingenieur en dan van den technisk direkteur van et team en hy vertrågeden ekspres üm Nico Rosberg terüg too dringen in de achtervölgende groop an et ende van de ende üm rivålen  Vettel en Verstappen uut too nöydigen üm synen teammåt in too hålen, wat dertoo had eleided dat hy et individuelen kampioonskap sül winnen. Mår Rosberg kön syne positsy vasteholden üm up de tweyde plåtse too endigen, genog üm de titel too winnen med 385 pünten teagenoaver de 380 van Hamilton. Under drük evrågd ov Hamilton ne sanktsy ov sölvs ne uutslüting kön krygen, antwoordeden Toto Wolff: "Alles is möägelik", skonwal der ging strav oapenbår wyr emåked. Anderen hebbet hem estööned med et principe dat "koureurs vry bünt üm too racen". Nå de race ontkenneden Hamilton dat hy sküldig was ewest van slecht gedrag, wårby hy sei "Ik denke neet dat ik wat gevöärliks heb edåne", "Ik was an de leiding, düs ik bepåleden et tempo. So bünt de reagels."
+In Abu Dhabi behåleden Hamilton de eyrste startpositsy vöär Rosberg en had up hem nen vöärsprung vöär et gröytsten deal van de race.  In de låtste runden van de race ging Hamilton teagen teamorders in, eyrst van synen raceingenieur en dan van den technisk direkteur van et team en hy vertrågeden ekspres üm Nico Rosberg terüg too dringen in de achtervölgende groop an et ende van de ende üm rivålen  Vettel en Verstappen uut too nöydigen üm synen teammåt in too hålen, wat dertoo had eleided dat hy et individuelen kampioonskap sül winnen. Mår Rosberg kön syne positsy vasteholden üm up de tweyde plåtse too endigen, genog üm de titel too winnen med 385 pünten teagenoaver de 380 van Hamilton. Under drük evrågd ov Hamilton ne sanktsy ov sölvs ne uutslüting kön krygen, antwoordeden Toto Wolff: "Alles is möägelik", skonwal der ging strav oapenbår wyr emåked. Anderen hebbet hem estööned med et principe dat "koureurs vry bünt üm too racen". Nå de race ontkenneden Hamilton dat hy sküldig was ewest van slecht gedrag, wårby hy sei "Ik denke neet dat ik wat gevöärliks heb edåne", "Ik was an de leiding, düs ik bepåleden et tempo. So bünt de reagels."
 
 ==== Et seisoon van 2017: Veerde werldtitel ====
 [[Bestaand:Lewis_Hamilton_2017_Catalonia_test_(27_Feb-2_Mar)_Day_1.jpg|rechts|duum|Hamilton tydens et testen in et vöärseisoon van 2017.]]
@@ -168,19 +168,16 @@ In de tweyde race van et seisoon in China, starteden Hamilton weader vanav de ey
 
 In Bahrein, de darde race van 2017, wyr Hamilton in den stryd üm de eyrste startpositsy verslågen döär Bottas. Hy wyr inehåled döär Vettel by den start en kreg dan nen strav van vyv sekunden vöär et too langsåm ryden in de pitstråte, mår herstelleden sich üm tweyds too endigeden achter rivål vöär et kampioonskap Vettel. Nå de race veruntsküldigeden hy sich oapenbår by et team vöät den strav den hy untvangen had, mår hy nuumeden ok syne sörgen oaver de snelheyd van synen wågen. In de völgende race in Sotsji, Rüsland, had Hamilton et heyle weakende moite med de snelheyd en kwalificereden hy sich as veerden. In de race endigeden hy as veerden, terwyl synen teammåt Bottas syne eyrste oaverwinning in nen Grand Prix oit behåleden.
 
-Mercedes brought a series of upgrades to their car for the Spanish Grand Prix, and qualifying saw Hamilton take pole ahead of Ferrari's Sebastian Vettel.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/39908130|title=Lewis Hamilton on pole position in Spain ahead of Sebastian Vettel|date=13 May 2017|work=BBC Sport|access-date=13 May 2017|language=en-GB}}</ref> Vettel overtook Hamilton going into the first turn, who was unable to pass until Vettel pitted 14 laps later. Hamilton stayed out before pitting under the Virtual Safety Car, gaining time on Vettel who pitted a lap later. Vettel emerged from the pitlane alongside Hamilton, and the pair touched wheels as Hamilton was forced off the track and fell behind Vettel. Hamilton passed Vettel for the lead on lap 44 and held on to win the race, reducing Vettel's lead in the championship to six points and increasing Mercedes' lead in the Constructors' Championship to eight points over Ferrari.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/race-hamilton-beats-vettel-in-spain-to-close-title-race.html|title=Race – Hamilton beats Vettel in Spain to close title race|website=Formula1.com|publisher=Formula One World Championship Ltd|date=14 May 2017|accessdate=15 May 2017}}</ref>
+Mercedes bracht nen reeks verbetteringen an de motoren an vöär den spaansken Grand Prix en in de kwalifikatsy pakkeden Hamilton de eyrste startpositsy vöär Sebastian Vette van Ferraril. Vettel håleden Hamilton in by de eyrste buchte, den neet in ståt was in te hålen tötdat Vettel 14 ründen låter nen pitstop måkeden. Hamilton blef buuten tötdat hy nen pitstop deed under den ''Virtual Safety Car'', wårmed hy tyd wön up Vettel den synen pitstop ne runde låter deed. Vettel kwam nevven Hamilton uut de pitstråte en de twey råkeden mekanders wylen as Hamiltonvan de båne wyr edwungen en achterstand up Vettel upleep. Hamilton håleden Vettel by vöär de leiding in runde 44 en heeld et vaste üm de race too winnen, wat de leiding van Vettel in et kampioonskap terügdrung töt ses pünten en de vöärsprung van Mercedes in et kampioonskap vöär konstrukteurs töt acht pünten up Ferrari uutbreideden. Twey weaken låter in Monako, terwyl Ferrari de eyrste twey startpositsys besetteden, kwalificereden Hamilton sich as 14den terwyl hy moite had üm syne banden up too warmen mår ok syne låtste -vrye- runde verhinderd wyr döär nen incident wår Stoffel Vandoorne by betrökken was. Hamilton herstelleden sich en endigeden seavendes, terwyl Vettel Räikkönen inhåleden tydens de fase van de pitstops üm de race too winnen en syne leiding in et kampioonskap når 25 pünten up Hamilton uut too breiden.[[Bestaand:First_corner,_GP_of_Canada_2017_(35203105871).jpg|links|duum|Hamilton wön den Grouten Prys van Kanada van 2017 vanav de eyrste startpositsy üm de eyrste 1–2 finish van Mercedes van et seisoon too bewerkstelligen.]]
+Nå dat resultåt, behåleden Hamilton de eyrste startpositsy in Kanada, wårmed hy gelyk kwam med synen held Ayrton Senna med de 65e mål (up de eysrte startpositsy) in syne karriere. Hy kreg eynen van de olde helmen van Senna aneboden, nen givt van de family van den douden Brasiliaan vöär et gelykkommen med syn rekord. Nå et untvangen van den givt, was Hamilton språkelous vöär nen moment, vöärdat hy sei: "Ik trille. Ik wet dat Ayrton vöär velen van owlüden owen favoriten koureur was en dat was hy ok vöär myn. Hy inspirereden myn üm too kommen wår dat ik vandage bün, dus üm dit too untvangen is den gröysten eer". Hamilton wön,terwyl hy alle ründen van de race an de leiding reed en de snelste runde neaderesettet had vöär synen tweyden Grand Slam van et seisoon.
 
-Two weeks later in Monaco, while Ferrari locked out the front row, Hamilton qualified in 14th as he struggled to warm his tyres as well as his final flying lap being impeded by an accident involviånåledeng Stoffel Vandoorne.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/qualifying---raikkonen-heads-all-ferrari-front-row-in-monaco.html|title=Qualifying – Räikkönen heads all-Ferrari front row in Monaco|website=formula1.com|accessdate=16 June 2017}}</ref> Hamilton recovered to finish seventh, while Vettel passed Räikkönen through the pit-stop phase to win the race and extend his championship lead to 25 points over Hamilton.<ref>{{cite web|url=https://www.formula1.com/en/latest/headlines/2017/5/race-monaco-win-extends-vettels-championship-lead.html|title=Race – Monaco win extends Vettel's championship lead|website=formula1.com|accessdate=16 June 2017}}</ref>
-[[Bestaand:First_corner,_GP_of_Canada_2017_(35203105871).jpg|links|duum|Hamilton won the 2017 Canadian Grand Prix from pole to record Mercedes' first 1–2 finish of the season]]
-After that result, Hamilton took pole in Canada, equalling his hero Ayrton Senna with the 65th of his career. He was presented with one of Senna's old helmets, a gift from the late Brazilian's family for equalling his record. Upon receiving the gift, Hamilton was speechless for a moment, before saying "I'm shaking. Ayrton, I know for many of you was your favourite driver and he was for me. He inspired me to be where I am today so to receive this is the greatest honour".<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/40225237|title=Lewis Hamilton top in Canadian Grand Prix first practice|date=9 June 2017|work=BBC Sport|access-date=10 June 2017|language=en-GB}}</ref> Hamilton won, leading every lap of the race and setting the fastest lap for his second Grand Slam of the season.<ref>{{Cite news|url=https://www.bbc.co.uk/sport/formula1/40241886|title=Lewis Hamilton wins in Canada for sixth time|date=11 June 2017|work=BBC Sport|access-date=13 June 2017|language=en-GB}}</ref>
+Hamilton verseakereden sich vöär de vyvde mål van et seisoon van de eyrste startpositsy by den Grouten Prys van Azerbeidjan, terwyl hy den achterstand up den leider in et kampioonskap Vettel probereden too verkleinen. Hamilton had nen goden start, terwyl Vettel uprükkeden når de tweyde plåtse nådat Bottas en Räikkönen in den eyrsten sektor wyren ebotsed. De race sat vul med incidenten, med dree safety cars en nen rouden vlag. Jüüst vöärdat de tweyde safety carperiode endigeden, botseden Vettel teagen den achterkant van den wågen van Hamilton en besküldigeden synen rivål van et hem uutdågen döär syne remmen uut too testen, mår de telemetriske data van de FIA toneden an dat Hamilton syne remmen neet had ebruked. Eynige momenten låter, kwam Vettel langssyde en den Mercedes van Hamilton avsnydeden terwyl sy sich vöärbereideden up nen herstart, wårvöär hy den strav kreg dat hy tyn sekunden stille mos stån. Skonwal had Hamilton nen pår runden eyrder nen pitstop motten måken vöär nen lössen vöärkant, kwam Vettel når vöären en blev hy Hamilton vöär wårmed hy 14 pünten vöär kwam in den tüskenstand. Hy kreg ginne wydere bestravving, mår nam de volledige verantwöärdelikheyd, bracht ne püblike veruntsküldiging an Hamilton uut en bekenneden de kommende 12 månden in synen personliken tyd vry too süllen måken vöär underrichtsaktiviteyten tydens nen antal FIA kampioonskappen en evenementen.
 
-Hamilton secured his fifth pole of the season at the Azerbaijan Grand Prix, as he looked to reduce the deficit to championship leader Vettel. Hamilton made a good start, while Vettel moved up to second after Bottas and Räikkönen collided in the first sector. The race was full of incident, with three safety cars and a red flag. Just before the second safety car period was ending, Vettel rear-ended Hamilton, accusing his title rival of brake testing him, though FIA telemetry data showed that Hamilton had not used his brakes.<ref>{{cite web|url=http://www.planetf1.com/news/fia-analysis-proves-hamilton-did-not-brake-test-vettel/|title=FIA data shows Hamilton did not brake-test Vettel|website=www.planetf1.com|accessdate=1 July 2017}}</ref> Moments later, Vettel pulled alongside and swerved into Hamilton's Mercedes as they prepared for a restart, for which he received a ten-second stop-go penalty.<ref>{{cite web|title=Lewis Hamilton calls Sebastian Vettel 'a disgrace' after Azerbaijan GP collision|url=http://m.bbc.com/sport/formula1/40400301|publisher=BBC Sport|accessdate=26 June 2017}}</ref> However, with Hamilton being forced to pit for a loose headrest a couple of laps earlier, Vettel emerged in front and held off Hamilton to move 14 points clear in the standings. He received no further punishment, but took full responsibility, issuing a public apology to Hamilton and committing to devote personal time over the next 12 months to educational activities across a variety of FIA championships and events.<ref>{{Cite web|url=http://www.gpupdate.net/en/f1-news/355310/vettel-admits-responsiblity-fia-closes-case/|title=No further action after Vettel apologises|website=GPUpdate.net|language=en-GB|access-date=4 July 2017}}</ref>
+In Oustenryk, kwalificereden Hamilton sich dardes achter Vettel, terwyl Bottas de eyrste startpositsy behåleden. Hy untvangeden nen strav van vyv startplåtsen nådat synen wågen ne unanekondigede verwisseling van den versnellingsbak nöydig had, wårdöär hy de race as achtsten begön. Hamilton beendigeden de race as veerden, terwyl Bottas syne tweyde oaverwinning in nen Grouten Prys oit behåleden. Vettel endigeden tweyds wårmed hy synen vöärsprung in et kampioonskap når 20 pünten up Hamilton uutbreideden.
+[[Bestaand:2017_British_Grand_Prix_(35895436386).jpg|rechts|duum|Hamilton behåleden synen vyvden  Grand Slam van syne karriere en synen darden van et seisoon in den britsken Grand Prix.]]
+By den britsken Grand Prix, kwalificereden Hamilton sich vöär de eyrste startpositsy, med nen tyd den meyr as ne halve sekunde rapper was as den tweydseplåtseden Räikkönen. De race wyr ewönnen döär Hamilton, den gelykkwam med et rekord med synen darden grand slam van et seisoon, startend van de eyrste startpositsy, terwyl hy alle ründen van de race had eleided, de rapste runde had neaderesetted en med 14 sekunden vöärsprung up synen Mercedes-teammåt Bottas wön. Med syne vyvde oaverwinning in den britsken Grand Prix kwam hy gelyk med de rekords van Alain Prost en Jim Clark, dy allebeide ok vyv mål disse race hadden ewönnen. Dårenteagen had synen rivål in et kampioonskap Sebastian Vettel laste van et fålen van syne banden med twey ründen too gån en endigeden dårnå seavendes. Dårdöär nam synen vöärsprung up Hamilton in de individuelen tüskenstand av töt eyn pünt.
 
-In Austria, Hamilton qualified third behind Vettel, while Bottas took pole. He received a five-place grid penalty after his car required an unscheduled gearbox change, starting the race in eighth.<ref>{{Cite news|url=https://www.telegraph.co.uk/formula-1/2017/07/07/lewis-hamilton-hit-five-place-grid-penalty-austrian-gran-prix/|title=Lewis Hamilton hit with five-place grid penalty at Austrian Grand Prix for unscheduled gearbox change|work=The Telegraph|language=en-GB|access-date=23 August 2017}}</ref> Hamilton finished the race in fourth place, while Bottas took his second ever Grand Prix victory. Vettel finished in second to extend his championship lead to 20 points over Hamilton.<ref>{{Cite news|url=https://www.telegraph.co.uk/formula-1/2017/07/09/austrian-grand-prix-2017-live-race-updates-lewis-hamilton-latest/|title=Valtteri Bottas wins in Austria as Lewis Hamilton misses out on podium after grid-place penalty|work=The Telegraph|language=en-GB|access-date=23 August 2017}}</ref>
-[[Bestaand:2017_British_Grand_Prix_(35895436386).jpg|rechts|duum|Hamilton achieved his fifth career Grand Slam and his third of the season during the British Grand Prix.]]
-At the British Grand Prix, Hamilton qualified on pole, with a time over half a second quicker than second-placed Räikkönen.<ref>{{Cite news|url=https://www.telegraph.co.uk/formula-1/2017/07/15/british-grand-prix-qualifying-live-can-lewis-hamilton-secure/|title=Lewis Hamilton delights Silverstone crowd with crushing performance to claim pole at British Grand Prix|work=The Telegraph|language=en-GB|access-date=23 August 2017}}</ref> The race was won by Hamilton, who achieved a record-equalling third grand slam of the season, starting from pole position, leading every lap of the race, setting fastest lap, and winning with a 14-second lead over Mercedes teammate Bottas. With his fifth British Grand Prix win, he equalled the records of Alain Prost and Jim Clark, who also won the race five times each. In contrast, his championship rival Sebastian Vettel suffered a tyre failure with two laps to go, and subsequently finished seventh. As a result, his lead over Hamilton in the Drivers' standings was reduced to one point.<ref>{{Cite news|url=https://www.telegraph.co.uk/formula-1/2017/07/16/british-grand-prix-2017-live-f1-race-updates-lewis-hamilton/|title=Lewis Hamilton silences critics with fifth British Grand Prix win|work=The Telegraph|language=en-GB|access-date=23 August 2017}}</ref>
-
-The next week, Hamilton finished in fourth position in Hungary, behind Bottas. This attracted some controversy as Bottas was initially ahead of Hamilton, however, due to Vettel having steering damage in first place, combined with Räikkönen being unable to pass his teammate, a queue of cars was forming behind the Ferraris. As Bottas was unable to overtake Räikkönen, Hamilton requested that he swap places with Bottas to try to overtake both Ferraris. Unable to do so, Hamilton relinquished the position back to Bottas on the final corner of the last lap. Vettel went on to win the race, and so extended his lead in the Drivers' Championship over Hamilton to 14 points and Mercedes' lead in the Constructors' Championship was reduced to 39 points over Ferrari.<ref>{{Cite news|url=https://www.formula1.com/en/latest/headlines/2017/7/race---vettel-wins-as-ferrari-prove-unstoppable-in-hungary.html|title=Race – Vettel wins as Ferrari prove unstoppable in Hungary|work=Formula1.com|access-date=30 July 2017|language=en}}</ref>
+De völgende weak endigeden Hamilton veerdes in Hungarye, achter Bottas. Dit leideden töt wat kontroversy ümdat Bottas eyrstens vöär Hamilton lag, mår, ümdat Vettel skade an syn stüre had en Räikkönen synen teammåt neet kön inhålen, vörmeden sich nen ry wågen achter de Ferraris. Terwyl Bottas Räikkönen neet kön inhålen, vrågeden Hamilton üm syne plåtse too wisselen med Bottas üm beyde Ferraris in proberen too hålen. Ümdat hem dat neet lükkeden, gav Hamilton de positsy terügge an Bottas by de låtste buchte van de låtste runde. Vettel wön de race en breideden synen vöärsprung in et individuelen kampioonskap up Hamilton uut töt 14 pünten en den vöärsprung van Mercedes in et kampioonskap vöär konstrukteur wayr terügebracht töt 39 pünten up Ferrari.
 
 Hamilton regained the lead of the championship after a hat-trick of victories after the summer break. During the qualifying of the Belgian Grand Prix, Hamilton scored his 68th career pole position, setting the fastest lap ever at the Circuit de Spa-Francorchamps (1:42.553) while championship rival, Vettel, qualified alongside him on the front row of the grid.<ref name="2017 Belgian Grand Prix Qualifying">{{cite web|title=Qualifying – Hamilton equals Schumacher's all-time pole record|url=https://www.formula1.com/en/latest/headlines/2017/8/qualifying---hamilton-equals-schumachers-all-time-pole-record.html|work=Formula1.com|publisher=[[Formula One Group|Formula One Administration]]|date=26 August 2017|accessdate=26 August 2017}}</ref> At his 200th Formula One race, Hamilton claimed his fifth win of the season in a close battle with Vettel who managed to keep in touch with Hamilton throughout the entire race, but could not find a way past.<ref name="2017 Belgian Grand Prix Race">{{cite web|title=2017 Belgian Grand Prix Race|url=https://www.formula1.com/en/latest/headlines/2017/8/race---race-hamilton-holds-off-vettel-to-halve-title-deficit.html|work=Formula1.com|publisher=[[Formula One Group|Formula One Administration]]|date=27 August 2017|accessdate=5 September 2017}}</ref>
 
